# OpenSMOKEpp_Interfaces

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml  setup.py
cmake/: CompilerOptions.cmake  FindOpenSMOKEpp.cmake  InstallationOptions.cmake  Options.cmake
cmake/examples/: macosx-minimal.sh
cpp_interface/: pyOpenSMOKEppInterface.cpp
cpp_interface/ideal_reactors/batch/: OpenSMOKE_BatchReactor.h  OpenSMOKE_BatchReactor.hpp  pyBatchReactor.h  pyBatchReactor.hpp
examples/: batch.py  batch_examples.py  main.py  thermodynamic.ipynb
examples/data/: kinetics.xml  reaction_names.xml
interfaces/python/: CMakeLists.txt  pyOpenSMOKE.cpp
interfaces/python/ideal_reactors/: CMakeLists.txt
interfaces/python/ideal_reactors/batch/: BatchReactor.cpp  BatchReactor.h  CMakeLists.txt  pyBatchReactor.cpp  pyBatchReactor.h
interfaces/python/maps/: CMakeLists.txt  OpenSMOKEMaps.cpp  OpenSMOKEMaps.h
pyOpenSMOKEpp/: batch.py
source/opensmoke_interface/: CMakeLists.txt  OpenSMOKEppInterface_py.cpp
source/opensmoke_interface/opensmoke_interface/: OpenSMOKEMaps.h  OpenSMOKEppInterface_py.cpp
source/python/: CMakeLists.txt  pyOpenSMOKE.cpp
source/python/ideal_reactors/: CMakeLists.txt
source/python/ideal_reactors/batch/: BatchReactor.cpp  BatchReactor.h  CMakeLists.txt
source/python/ideal_reactors/numerics/: CMakeLists.txt
source/python/maps/: CMakeLists.txt  OpenSMOKEMaps.cpp  OpenSMOKEMaps.h
